# dotbak

./: .gitignore  .gitpod.yml  Cargo.toml  DIAGRAMS.md  README.md
.circleci/: config.yml
dotbak/: Cargo.toml
dotbak-cli/: Cargo.toml
dotbak-cli/src/: cli.rs
dotbak-core/: Cargo.toml
dotbak-core/src/: lib.rs  locations.rs  test_util.rs  tests.rs
dotbak-core/src/config/: files.rs  mod.rs  tests.rs
dotbak-core/src/errors/: git.rs  io.rs  mod.rs
dotbak-core/src/files/: mod.rs  tests.rs
dotbak-core/src/git/: mod.rs  tests.rs
dotbak/src/: ui.rs
dotbak/src/lib/: tests.rs
dotbak/src/lib/config/: files.rs
dotbak/src/lib/files/: mod.rs
src/: cli.rs  config.rs  dotbak.rs  errors.rs  logger.rs  main.rs  spinners.rs  tests.rs  ui.rs
src/config/: mod.rs  tests.rs
src/dotback/: config.rs  dotfile.rs  error.rs  mod.rs
src/dotbak/: daemon.rs  logger.rs  mod.rs  spinners.rs  tests.rs
src/errors/: config.rs  io.rs
src/files/: mod.rs
src/git/: mod.rs  tests.rs
src/lib/: errors.rs  lib.rs  locations.rs  mod.rs  test_util.rs  tests.rs
src/lib/config/: mod.rs  tests.rs
src/lib/errors/: config.rs  git.rs  io.rs  mod.rs
src/lib/files/: mod.rs
src/lib/git/: mod.rs  tests.rs
src/lib/term/: mod.rs
src/lib/ui/: mod.rs
src/ui/: messages.rs  mod.rs
