[workspace]
	default-members = ["dotbak", "dotbak-core"]
	members         = ["dotbak", "dotbak-core"]

	[workspace.package]
		authors    = ["Ian Pratt <ianjdpratt@gmail.com>"]
		categories = ["command-line-utilities", "config"]
		edition    = "2021"
		homepage   = "https://github.com/cogsandsquigs/dotbak"
		keywords   = ["cli", "dotfiles", "linux", "macos", "unix"]
		license    = "AGPL-3.0"
		readme     = "../README.md"
		repository = "https://github.com/cogsandsquigs/dotbak"
		version    = "0.2.1"
