[package]
	authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
	categories  = ["command-line-utilities", "config"]
	description = "Manage and backup dotfiles with ease!"
	edition     = "2021"
	homepage    = "https://github.com/cogsandsquigs/dotbak"
	keywords    = ["cli", "dotfiles", "linux", "macos", "unix"]
	license     = "AGPL-3.0"
	name        = "dotbak"
	readme      = "README.md"
	repository  = "https://github.com/cogsandsquigs/dotbak"
	version     = "0.3.0"

[dependencies]
	# CLI
	clap      = { version = "^4", features = ["derive"] } # Parse CLI
	console   = "^0.15"                                   # Colored output
	indicatif = "^0.17"                                   # Progress bars

	# Error handling
	miette    = { version = "^5", features = ["fancy"] } # For pretty errors
	thiserror = "^1.0.53"                                # For error handling

	# Configuration serialization/deserialization
	serde = { version = "^1", features = ["derive"] }
	toml  = "^0.8"

	# Filesystem
	dirs = "^5" # Getting the user's home directory

	# Misc.
	itertools = "^0.12" # For iterators and other things

	# TODO: add tracing (https://lib.rs/crates/tracing) for debugging/logging.
	# TODO: look at blessed.rs (https://blessed.rs/crates) for terminal UI/others/etc.

[dev-dependencies]
	assert_fs = "^1" # For testing filesystem operations
	is_ci     = "^1" # For checking if we're in CI

[[bin]]
	name = "dotbak"
	path = "src/main.rs"
