[package]
	authors     = { workspace = true }
	description = "The core library API for dotbak."
	edition     = { workspace = true }
	license     = { workspace = true }
	name        = "dotbak-core"
	version     = { workspace = true }

[dependencies]
	# Configuration serialization/deserialization
	serde = { version = "~1", features = ["derive"] }
	toml  = "~0.7"

	# Error handling
	miette = "5"    # For pretty errors
	snafu  = "~0.7" # For error handling

	# Filesystem
	dirs = "~5" # Getting the user's home directory

	# Misc.
	itertools = "~0.11" # For iterators and other things

	# TODO: add tracing (https://lib.rs/crates/tracing) for debugging/logging.
	# TODO: look at blessed.rs (https://blessed.rs/crates) for terminal UI/others/etc.

[dev-dependencies]
	assert_fs = "1" # For testing filesystem operations
